[Fix] Add #genra-list max-height and overflow

--- a/assets/front/css/_index.scss
+++ b/assets/front/css/_index.scss
@@ -17,7 +17,7 @@
         label{
             font-size: 1em;
         }
-        #author-list{
+        #author-list, #genra-list {
             max-height: 260px;
             overflow: auto;
         }
